# upload_basemap

./: .env  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  upload_history.json  upload_resume.json
db_backup/: upload_tracker_backup.sql
scripts/: backup_db.py  migrate_to_postgres.py  restore_db.py  verify_migration.py
tests/: .env.test  conftest.py  test_file_finder.py  test_upload.py  test_upload_tracker.py
upload_basemap/: main.py
upload_basemap/src/: file_finder.py  s3_upload.py  upload_tracker.py
