[tool.poetry]
name = "upload-basemap"
version = "0.1.0"
description = ""
authors = ["AndreaScorza <atlantas95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.35.87"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
