[tool.poetry]
name = "upload-basemap"
version = "0.1.0"
description = ""
authors = ["AndreaScorza <atlantas95@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.35.87"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.25"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.poetry.scripts]
upload = "upload_basemap.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
